<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_rounded_bg"
    android:minHeight="600dp"
    android:paddingStart="@dimen/dialog_padding"
    android:paddingTop="@dimen/dialog_padding"
    android:paddingEnd="@dimen/dialog_padding"
    android:paddingBottom="@dimen/dialog_padding">

    <LinearLayout
        android:id="@+id/segmentedControl"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@drawable/segmented_container_bg"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/segCurrencies"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/segmented_selected_bg"
            android:gravity="center"
            android:text="@string/segment_currencies"
            android:textColor="@color/grey"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/segCrypto"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/segment_crypto"
            android:textColor="@color/grey"
            android:textSize="14sp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtSearch"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/search_pill_bg"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="8dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:singleLine="true"
        android:lines="1"
        android:textColor="@color/grey"
        tools:text="US dollar"
        android:hint="@string/search_your_currency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/segmentedControl" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imvClear"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:padding="@dimen/clear_padding"
        android:src="@drawable/ic_close"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/edtSearch"
        app:layout_constraintEnd_toEndOf="@id/edtSearch"
        app:layout_constraintTop_toTopOf="@id/edtSearch"
        app:tint="@color/grey2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txvFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="1dp"
        android:paddingStart="4dp"
        android:text="@string/favorites"
        android:textColor="@color/teal_700"
        android:textSize="@dimen/search_titles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtSearch" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txvCurr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:text="@string/currencies"
        android:textColor="@color/teal_700"
        android:textSize="@dimen/search_titles"
        app:layout_constraintStart_toEndOf="@id/txvFav"
        app:layout_constraintTop_toTopOf="@id/txvFav" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txvRates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rates"
        android:textColor="@color/teal_700"
        android:textSize="@dimen/search_titles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/txvFav" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/dialog_inner_card_bg"
        android:clipToOutline="true"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txvFav"
        tools:listitem="@layout/currency_item" />

</androidx.constraintlayout.widget.ConstraintLayout>
